se agrega mas contenido y grid a Sneakeers YEZZY DRBALL

--- a/page_5/sneackers.html
+++ b/page_5/sneackers.html
@@ -292,32 +292,79 @@
             <table class="table table-dark table-striped">
                 <thead>
                   <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th scope="col">Articulo y talles </th>
+                    <th scope="col">40</th>
+                    <th scope="col">42</th>
+                    <th scope="col">44</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td>Rojo,Negro,Azul</td>
+                    <td>Verde,Amarillo</td>
+                    <td>Blanco</td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>@fat</td>
+                    <td>Rojo</td>
+                    <td>Fuccia</td>
+                    <td>Gris</td>
                   </tr>
                   <tr>
                     <th scope="row">3</th>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>@twitter</td>
+                    <td>Beige</td>
+                    <td>Dorado</td>
+                    <td>Beige</td>
                   </tr>
                 </tbody>
               </table>
+
+
+              <div class="container">
+
+                <div class="row">
+
+                    <div class="col">
+
+                        <img src="../imag/Sneakers/Addidas/frezeer.jpg" alt="">
+
+                    </div>
+
+                    <div class="col">
+
+                        <img src="../imag/Sneakers/Addidas/goku.jpg" alt="">
+                        
+                    </div>
+
+
+
+                </div>
+
+
+                <div class="row">
+
+                    <div class="col">
+
+                        <img src="../imag/Sneakers/Addidas/picolo.jpg" width="450px" height="316px" alt="">
+
+                    </div>
+
+                    <div class="col">
+                        <img src="../imag/Sneakers/Addidas/yezze_dragon_ball_negro.jpg" width="450px" height="316px" alt="">
+
+                    </div>
+
+                    <div class="col">
+
+
+                        <img src="../imag/Sneakers/Addidas/yezze_magin_bu.jpg" width="450px" height="316px" alt="">
+
+                    </div>
+
+                    
+                </div>
+              </div>
 
 
 
